# open-dub

./: README.md  pyproject.toml
open_dub/: transcription_model.py
open_dub/utils/: __init__.py  logger_utils.py
