[project]
name = "open-dub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "openai-whisper>=20240930",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "pydub>=0.25.1",
    "soundfile>=0.13.1",
]
